--- a/css/style.css
+++ b/css/style.css
@@ -157,6 +157,10 @@ select {
 }
 
 /*Accordion*/
+.accordion {
+    max-width: 800px;
+    margin: auto;
+}
 .accordion-button {
     font-size: 17px;
     font-weight: 500;
