--- a/css/style.css
+++ b/css/style.css
@@ -66,3 +66,31 @@ h1 {
 .btn-danger:hover {
     background-color: rgb(174, 2, 2);
 }
+
+/* Full Sized Form */
+/* Form */
+.content form .full-input-box {
+    display: block;
+}
+
+form .user-details .input-box {
+    width: 100%;
+}
+select {
+    color: grey;
+    width: 100%;
+    height: 45px;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+    padding-left: 15px;
+    border: 1px solid #ccc;
+}
+#file {
+    color: grey;
+    width: 100%;
+    height: 45px;
+    outline: none;
+    font-size: 16px;
+    border-radius: 5px;
+}
